--- a/Ideias/index.html
+++ b/Ideias/index.html
@@ -8,12 +8,22 @@
 </head>
 <body>
     <div class="content">
-        <div class="header">
+        <div class="container">
+            <div class="header">
             <ul>
-                <img id="config" src="Referenccias/configLinha (1).png">
-                <img id="logo" src="Referenccias/Sem título.png">
-                <img id="menu" src="Referenccias/Menu Soft.png">
-            </ul>
+                    <img id="config" src="Referenccias/configLinha (1).png">
+                    <img id="logo" src="Referenccias/Sem título.png">
+                    <img id="menu" src="Referenccias/Menu Soft.png">
+                </ul>
+            </div>
+            <div class="box">
+                <ul>
+                    <h1>
+                        "Velocidade é isso, sentir-se livre"
+                    </h1>
+                    <h3>Velozes & furiosos</h4>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
