--- a/Ideias/index.html
+++ b/Ideias/index.html
@@ -11,18 +11,20 @@
         <div class="container">
             <div class="header">
             <ul>
-                    <img id="config" src="Referenccias/configLinha (1).png">
-                    <img id="logo" src="Referenccias/Sem título.png">
+                    <img id="config" src="Referenccias/carrinho-removebg-preview.png">
+                    <img id="logo" src="Referenccias/Fast_X_logo.png">
                     <img id="menu" src="Referenccias/Menu Soft.png">
                 </ul>
             </div>
-            <div class="box">
-                <ul>
-                    <h1>
-                        "Velocidade é isso, sentir-se livre"
-                    </h1>
-                    <h3>Velozes & furiosos</h4>
-                </ul>
+            <div class="data">
+                <div class="box">
+                    <li>
+                        <h1>
+                            "Velocidade é isso, sentir-se livre"
+                        </h1>
+                        <h2>-Toretto</h2>
+                    </li>
+                </div>
             </div>
         </div>
     </div>
