Fazendo_a_segunda_parte_do_site

--- a/Ideias/index.html
+++ b/Ideias/index.html
@@ -18,14 +18,46 @@
             </div>
             <div class="data">
                 <div class="box">
-                    <li>
-                        <h1>
-                            "Velocidade é isso, sentir-se livre"
-                        </h1>
-                        <h2>-Toretto</h2>
-                    </li>
+                    <div class="text">
+                        <li>
+                            <h1>
+                                "Velocidade é isso, sentir-se livre"
+                            </h1>
+                            <h2>-Toretto</h2>
+                        </li>
+                    </div>
+                    <div class="skip">
+                        <img src="Referenccias/Seta_esq.png">
+                            <div class="ball">
+                                <div class="box">
+                                </div>
+                            </div>
+                            <div class="ball">
+                                <div class="box1">
+                                </div>
+                            </div>
+                            <div class="Erro">
+                                <div class="box2">
+                                </div>
+                            </div>
+                        <img src="Referenccias/Seta_dir.png">
+                    </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="infos">
+        <div class="img">
+            <div class="move">
+                <div class="line"></div>
+            </div>
+            <img src="Referenccias/Logo.png">
+            <div class="move2">
+                <div class="line2"><div>
+            </div>
+        </div>
+        <div class="art">
+
         </div>
     </div>
 </body>
