Mudando_as_cores

--- a/Ideias/index.html
+++ b/Ideias/index.html
@@ -46,6 +46,7 @@
             </div>
         </div>
     </div>
+
     <div class="infos">
         <div class="img">
             <div class="move">
@@ -53,10 +54,13 @@
             </div>
             <img src="Referenccias/Logo.png">
             <div class="move2">
-                <div class="line2"><div>
+                <div class="line2"></div>
             </div>
         </div>
-        <div class="art">
+    </div>
+
+    <div class="movies">
+        <div class="line1">
 
         </div>
     </div>
