--- a/Ideias/index.html
+++ b/Ideias/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="site.css">
 </head>
 <body>
+    <!-- HEADER -->
     <div class="content">
         <div class="container">
             <div class="header">
@@ -16,6 +17,7 @@
                     <img id="menu" src="Referenccias/Menu Soft.png">
                 </ul>
             </div>
+            <!-- TEXTOS -->
             <div class="data">
                 <div class="box">
                     <div class="text">
@@ -26,6 +28,7 @@
                             <h2>-Toretto</h2>
                         </li>
                     </div>
+                    <!-- SETA -->
                     <div class="skip">
                         <img src="Referenccias/Seta_esq.png">
                             <div class="ball">
@@ -46,7 +49,7 @@
             </div>
         </div>
     </div>
-
+<!-- LOGO -->
     <div class="infos">
         <div class="img">
             <div class="move">
@@ -58,10 +61,32 @@
             </div>
         </div>
     </div>
-
+    <!-- GIF -->
     <div class="movies">
+        <div class="wall">
+            <img src="Referenccias/gif/street.gif">
+        </div>
+        <!-- FILMES -->
         <div class="line1">
-
+                <img id="one" src="Referenccias/Filmes/1.jpg">
+                <img src="Referenccias/Filmes/2.png">
+                <img id="three" src="Referenccias/Filmes/3.jpg">
+        </div>
+        <div class="line2">
+            <img id="four" src="Referenccias/Filmes/4.png">
+            <img id="five" src="Referenccias/Filmes/5.jpg">
+        </div>
+        <div class="line3">
+            <img id="six" src="Referenccias/Filmes/6.jpg">
+            <img id="seven" src="Referenccias/Filmes/7.jpg">
+            <img id="eight" src="Referenccias/Filmes/8.jpg">
+        </div>
+        <div class="line4">
+            <img id="nine" src="Referenccias/Filmes/9.jpg">
+            <img id="ten" src="Referenccias/Filmes/10(2).jpg">
+        </div>
+        <div class="line5">
+            <img src="Referenccias/Filmes/R(2).jpg">
         </div>
     </div>
 </body>
