--- a/Ideias/index.html
+++ b/Ideias/index.html
@@ -85,8 +85,8 @@
             <img id="nine" src="Referenccias/Filmes/9.jpg">
             <img id="ten" src="Referenccias/Filmes/10(2).jpg">
         </div>
-        <div class="line5">
-            <img src="Referenccias/Filmes/R(2).jpg">
+        <div class="box">
+            <img id="robs" src="Referenccias/Filmes/R(2).jpg">
         </div>
     </div>
 </body>
