--- a/Ideias/index.html
+++ b/Ideias/index.html
@@ -86,7 +86,14 @@
             <img id="ten" src="Referenccias/Filmes/10(2).jpg">
         </div>
         <div class="box">
+            <img src="Referenccias/DuplasetaEsq.png">
             <img id="robs" src="Referenccias/Filmes/R(2).jpg">
+            <img src="Referenccias/DuplasetaDir.png">
+        </div>
+    </div>
+    <div class="container">
+        <div class="myself">
+            
         </div>
     </div>
 </body>
