--- a/Ideias/index.html
+++ b/Ideias/index.html
@@ -1,55 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="site.css">
 </head>
+
 <body>
     <!-- HEADER -->
     <div class="content">
         <div class="container">
             <div class="header">
-            <ul>
+                <ul>
                     <img id="config" src="Referenccias/carrinho-removebg-preview.png">
                     <img id="logo" src="Referenccias/Fast_X_logo.png">
                     <img id="menu" src="Referenccias/Menu Soft.png">
                 </ul>
             </div>
-            <!-- TEXTOS -->
-            <div class="data">
-                <div class="box">
-                    <div class="text">
-                        <li>
-                            <h1>
-                                "Velocidade é isso, sentir-se livre"
-                            </h1>
-                            <h2>-Toretto</h2>
-                        </li>
+            <div class="fixer">
+                <!-- TEXTOS -->
+                <div class="data">
+                    <div class="box">
+                        <div class="text">
+                            <li>
+                                <h1>
+                                    "Velocidade é isso, sentir-se livre"
+                                </h1>
+                                <h2>-Toretto</h2>
+                            </li>
+                        </div>
                     </div>
-                    <!-- SETA -->
+                </div>
+                <!-- SETA -->
+                <div class="row">
                     <div class="skip">
                         <img src="Referenccias/Seta_esq.png">
-                            <div class="ball">
-                                <div class="box">
-                                </div>
+                        <div class="ball">
+                            <div class="box">
                             </div>
-                            <div class="ball">
-                                <div class="box1">
-                                </div>
+                        </div>
+                        <div class="ball">
+                            <div class="box1">
                             </div>
-                            <div class="Erro">
-                                <div class="box2">
-                                </div>
+                        </div>
+                        <div class="ball">
+                            <div class="box2">
                             </div>
+                        </div>
                         <img src="Referenccias/Seta_dir.png">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-<!-- LOGO -->
+    <!-- LOGO -->
     <div class="infos">
         <div class="img">
             <div class="move">
@@ -68,20 +74,16 @@
         </div>
         <!-- FILMES -->
         <div class="line1">
-                <img id="one" src="Referenccias/Filmes/1.jpg">
-                <img src="Referenccias/Filmes/2.png">
-                <img id="three" src="Referenccias/Filmes/3.jpg">
-        </div>
-        <div class="line2">
+            <img id="one" src="Referenccias/Filmes/1.jpg">
+            <img src="Referenccias/Filmes/2.png">
+            <img id="three" src="Referenccias/Filmes/3.jpg">
             <img id="four" src="Referenccias/Filmes/4.png">
             <img id="five" src="Referenccias/Filmes/5.jpg">
         </div>
-        <div class="line3">
+        <div class="line2">
             <img id="six" src="Referenccias/Filmes/6.jpg">
             <img id="seven" src="Referenccias/Filmes/7.jpg">
             <img id="eight" src="Referenccias/Filmes/8.jpg">
-        </div>
-        <div class="line4">
             <img id="nine" src="Referenccias/Filmes/9.jpg">
             <img id="ten" src="Referenccias/Filmes/10(2).jpg">
         </div>
@@ -91,10 +93,11 @@
             <img src="Referenccias/DuplasetaDir.png">
         </div>
     </div>
-    <div class="container">
+    <div class="block">
         <div class="myself">
-            
+            <img src="Referenccias/Perfil.jpeg">
         </div>
     </div>
 </body>
+
 </html>
