Termino_site_estatico

--- a/Site/index.html
+++ b/Site/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="header">
                 <ul>
-                    <a href="">
+                    <a href="#configBox">
                         <img id="config" src="CSS/Referencias/carrinho-removebg-preview.png">
                     </a>
                 </ul>
