--- a/Site/index.html
+++ b/Site/index.html
@@ -14,8 +14,8 @@
         <div class="container">
             <div class="header">
                 <ul>
-                    <a href="#configBox">
-                        <img id="config" src="CSS/Referencias/carrinho-removebg-preview.png">
+                    <a>
+                        <img id="config" onclick="MostrarConfig()" src="CSS/Referencias/carrinho-removebg-preview.png">
                     </a>
                 </ul>
                 <ul>
@@ -29,11 +29,21 @@
                     </a>
                 </ul>
             </div>
+            <div id="barC" class="configuracoes" style="display: none;">
+                <div class="settingsConfig">
+                    <ul>
+                        <a href="#filmes">Filmes</a>
+                        <a href="#Robs&Shaw">Spin Off</a>
+                        <a href="#SobreMim">Sobre mim</a>
+                        <a href="#informacoes">Cadastro</a>
+                    </ul>
+                </div>
+            </div>
             <div class="fixer">
                 <!-- TEXTOS -->
                 <div class="data">
-                    <div class="box">
-                        <div class="text">
+                    <div class="box2">
+                        <div id="textinho" class="text">
                             <li>
                                 <h1>
                                     "Velocidade é isso, sentir-se livre"
@@ -46,20 +56,20 @@
                 <!-- SETA -->
                 <div class="row">
                     <div class="skip">
-                        <a href="#filmes"><img src="CSS/Referencias/Seta_esq.png"></a>
+                        <img onclick="VoltarTexto()" src="CSS/Referencias/Seta_esq.png">
                         <div class="ball">
-                            <div class="box">
+                            <div id="box1" class="box1">
                             </div>
                         </div>
                         <div class="ball">
-                            <div class="box1">
+                            <div id="box2" class="box2">
                             </div>
                         </div>
                         <div class="ball">
-                            <div class="box2">
+                            <div id="box3" class="box3">
                             </div>
                         </div>
-                        <img src="CSS/Referencias/Seta_dir.png">
+                        <img onclick="PassarTexto()" src="CSS/Referencias/Seta_dir.png">
                     </div>
                 </div>
             </div>
@@ -99,13 +109,13 @@
                 <img id="ten" src="CSS/Referencias/Filmes/10(2).jpg">
             </div>
         </div>
-        <div class="box">
+        <div id="Robs&Shaw" class="box">
             <img src="CSS/Referencias/DuplasetaEsq.png">
             <img id="robs" src="CSS/Referencias/Filmes/R(2).jpg">
             <img src="CSS/Referencias/DuplasetaDir.png">
         </div>
     </div>
-    <div class="block">
+    <div id="SobreMim" class="block">
         <div class="myself">
             <img id="me" src="CSS/Referencias/Perfil.jpeg">
             <img src="CSS/Referencias/volante.png">
@@ -119,32 +129,20 @@
             </ul>
         </div>
     </div>
-    <div class="credenciais">
+    <div id="informacoes" class="credenciais">
         <div class="text">
             <h1>Faça login e siga para o jogo</h1>
         </div>
         <div class="container">
             <div class="box">
-                <ul>
-                    <h2>Cadastro</h2>
-                    <p>Insira seu nome<input placeholder="Ex: Bryan"></p>
-                    <p>Insira seu email <input placeholder="example@sptech.school"></p>
-                    <p>Insira sua senha <input type="password" placeholder="********"></p>
-                    <p>Confirme sua senha <input type="password" placeholder="********"></p>
-                    <p><button>
-                            <h3>Cadastre-se</h3>
-                        </button></p>
-                </ul>
+                    <button>
+                        <h3>Cadastre-se</h3>
+                    </button>
             </div>
             <div class="box">
-                <ul>
-                    <h2>Log in</h2>
-                    <p>Insira seu email <input placeholder="example@sptech.school"></p>
-                    <p>Insira sua senha <input type="password" placeholder="********"></p>
-                    <p><button>
-                            <h3>Log in</h3>
-                        </button></p>
-                </ul>
+                    <button>
+                        <h3>Log in</h3>
+                    </button>
             </div>
         </div>
         <div class="row">
@@ -159,10 +157,17 @@
             </ul>
             <ul>
                 <a href="">
-                    <img id="up" src="CSS/Referencias/RedesSociais/instagram.png">
+                    <img id="up" src="CSS/Referencias/RedesSociais/instagramcor.png">
                 </a>
-                    <img id="up" src="CSS/Referencias/RedesSociais/whatsapp.png">
-                <img id="up" src="CSS/Referencias/RedesSociais/twitter.png">
+                <a href="">
+                    <img id="up" src="CSS/Referencias/RedesSociais/whatsappcor.png">
+                </a>
+                <a href="">
+                    <img id="up" src="CSS/Referencias/RedesSociais/twittercor.png">
+                </a>
+                <a href="">
+                    <img id="up" src="CSS/Referencias/RedesSociais/tik-tokcor.png">
+                </a>
             </ul>
         </div>
         <div id="down" class="line">
