--- a/Site/index.html
+++ b/Site/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- HEADER -->
     <div class="content">
-        <div class="container">
+        <div id="papelDeParede" class="container">
             <div class="header">
                 <ul>
                     <a>
@@ -56,20 +56,18 @@
                 <!-- SETA -->
                 <div class="row">
                     <div class="skip">
-                        <img onclick="VoltarTexto()" src="CSS/Referencias/Seta_esq.png">
                         <div class="ball">
-                            <div id="box1" class="box1">
+                            <div id="box1" onclick="base1()" class="box1">
                             </div>
                         </div>
                         <div class="ball">
-                            <div id="box2" class="box2">
+                            <div id="box2" onclick="base2()" class="box2">
                             </div>
                         </div>
                         <div class="ball">
-                            <div id="box3" class="box3">
+                            <div id="box3" onclick="base3()" class="box3">
                             </div>
                         </div>
-                        <img onclick="PassarTexto()" src="CSS/Referencias/Seta_dir.png">
                     </div>
                 </div>
             </div>
