--- a/Site/login.html
+++ b/Site/login.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Fast & Furious</title>
+    <title>Cadastro Fast & Furious</title>
+    <link rel="stylesheet" href="CSS/cadastroLogin.css">
 </head>
+
 <body>
     <div class="content">
         <div class="container">
-            <div class="credenciais">
-                
-            </div>
+        </div>
+        <div class="credenciais">
+            <ul>
+                <h1>Log in</h1>
+                <b>
+                    <label for="input_email_cadastro">
+                        E-mail:
+                    </label>
+                    <input id="input_email_cadastro">
+                </b>
+                <b>
+                    <!-- <label for="input_senha_cadastro"> -->
+                    Senha:
+                    <!-- </label> -->
+                    <input id="input_senha_cadastro">
+                </b>
+            </ul>
+            <button onclick="Login()">
+                <h3>
+                    Entrar
+                </h3>
+            </button>
         </div>
     </div>
 </body>
 </html>
+<script type="text/javascript" src="JS/cadastroLogin.js"></script>
