--- a/Site/cadastro.html
+++ b/Site/cadastro.html
@@ -28,21 +28,23 @@
                     <input id="input_email_cadastro">
                 </b>
                 <b>
-                    <!-- <label for="input_senha_cadastro"> -->
+                    <label for="input_senha_cadastro">
                     Senha:
-                    <!-- </label> -->
+                    </label>
                     <input id="input_senha_cadastro">
                 </b>
                 <b>
-                    <!-- <label for="input_confirma_cadastro"> -->
+                    <label for="input_confirma_cadastro">
                     Confirme sua senha:
-                    <!-- </label> -->
+                    </label>
                     <input id="input_confirma_cadastro">
                 </b>
             </ul>
+            <div id="erro" class="erro">
+            </div>
             <button onclick="Cadastrar()">
                 <h3>
-                    Cadastre-se
+                    Criar conta
                 </h3>
             </button>
         </div>
