--- a/Site/index.html
+++ b/Site/index.html
@@ -142,19 +142,15 @@
         <div class="resumo">
             <div class="borda">
                 <div id="texto" class="texto">
-                    <h1>Velozes & Furiosos 1</h1>
-                    <h3>Em Velozes e Furiosos (The Fast and The Furious, 2001), o policial Brian O' Connor (Paul Walker)
-                        é infiltrado no mundo das corridas de carros ilegais para juntar provas e capturar Dominic
-                        Toretto (Vin Diesel), líder da gangue e procurado pelo FBI.
+                    <h1>Não Conhece os Filmes ?</h1>
+                    <h3>
+                        Ok! Irei te ajudar.
                         <br>
-                        Durante a missão, Brian ganha a confiança e a amizade de Dom, além de se envolver com sua irmã,
-                        Mia (Jordana Brewster), o que o deixa confuso entre seguir com o seu objetivo ou honrar os laços
-                        de amizade e família que aprendeu durante o tempo em que passou infiltrado.
-                        <br>
-                        O filme que lançou os astros Vin Diesel e Paul Walker foi um sucesso na época, com uma
-                        bilheteria mundial de US$ 207 milhões para um custo de US$ 38 milhões. Carros turbinados,
-                        mulheres lindas e cenas de corrida em Los Angeles ganhavam o gosto do público.
+                        Basta você clicar em algum filme e seu resumo aparecerá aqui.
                     </h3>
+                    <h1>
+                        FAÇA ISSO AGORA!!!
+                    </h1>
                 </div>
             </div>
         </div>
@@ -188,9 +184,9 @@
             <img src="CSS/Referencias/volante.png">
             <ul>
                 <h2>Quem sou eu??</h2>
-                <h3> Olá, meu nome é Antônio Gonçalves Sousa, tenho 18 anos e gosto bastante de filmes, séries, carros,
+                <h3> Olá, meu nome é Antonio Gonçalves Sousa, tenho 18 anos e gosto bastante de filmes, séries, carros,
                     futebol, matemática e animais. Sou uma pessoa bastante proativa e tranquila, sempre buscando
-                    aprender e compartilhar conhecimento com colegas. Também me considero uma pessoa curiosa e que está
+                    me aperfeiçoar e compartilhar conhecimento com colegas. Também me considero uma pessoa curiosa e que está
                     sempre interessada em aprender e se diversificar cada vez mais, e isso é o que me impulsiona a novas
                     descobertas.
                 </h3>
@@ -199,7 +195,7 @@
     </div>
     <div id="informacoes" class="credenciais">
         <div class="text">
-            <h1>Faça login e siga para o jogo</h1>
+            <h1>Faça login e avançe para o jogo</h1>
         </div>
         <div class="container">
             <div class="box">
