--- a/Site/login.html
+++ b/Site/login.html
@@ -22,12 +22,14 @@
                     <input id="input_email_cadastro">
                 </b>
                 <b>
-                    <!-- <label for="input_senha_cadastro"> -->
+                    <label for="input_senha_cadastro">
                     Senha:
-                    <!-- </label> -->
+                    </label>
                     <input id="input_senha_cadastro">
                 </b>
             </ul>
+            <div id="erro" class="erro">
+            </div>
             <button onclick="Login()">
                 <h3>
                     Entrar
