--- a/site/public/joguinho.html
+++ b/site/public/joguinho.html
@@ -5,17 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/joguinho.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Brygada+1918:ital,wght@1,700&family=Edu+TAS+Beginner&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            
+            <ul>
+                <section>
+                    <a href="index.html"><img id="foto" src="css/Referencias/LogoBranca.png"></a>
+                </section>
+                <section>
+                    <label for="Quiz">Quiz</label>
+                </section>
+                <section>
+                    <img id="foto2" src="css/Referencias/grafico-de-barras.png">
+                </section>
+            </ul>
         </div>
         <div class="box">
-            <div class="imagem">
-                <button onclick="Quiz()">Ir para o Quiz</button>
+            <div id="imagem" class="imagem">
+                <button id="Quiz" onclick="Informacoes()">Ir para o Quiz</button>
             </div>
         </div>
     </div>
 </body>
 </html>
+<script src="js/joguinho.js">
+</script>
