--- a/site/public/index.html
+++ b/site/public/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Brygada+1918:ital,wght@1,700&family=Edu+TAS+Beginner&display=swap"
-        rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Brygada+1918:ital,wght@1,700&family=Edu+TAS+Beginner&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- HEADER -->
